# green-pipe

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  LICENSE  README.md  SUBMISSION.md  alembic.ini  docker-compose.yml  new_plan.md  pyproject.toml  requirements-prod.txt
.gitlab/agents/greenpipe/: config.yaml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_deferral_audit_log.py  0003_add_author_name_to_pipeline_runs.py
data/: commit_messages.csv
docs/: COMPLIANCE_CHECKLIST.md  DEMO_SCRIPT.md  GSF_ALIGNMENT.md  GSF_CONTRIBUTION.md  SCI_METHODOLOGY.md  SUSTAINABLE_DESIGN.md
src/: config.py  database.py  main.py
src/api/: agent_routes.py  agent_schemas.py  analytics_routes.py  analytics_schemas.py  report_formatter.py  routes.py  schemas.py
src/calculators/: sci_calculator.py
src/estimators/: energy_estimator.py
src/models/: pipeline.py
src/nlp/: classifier.py  dataset.py  quantize.py  trainer.py
src/services/: carbon_service.py  code_analyzer.py  gitlab_client.py  pipeline_analyzer.py
templates/: greenpipe-ci.yml
tests/: test_agent_routes.py  test_analytics.py  test_auto_deferral.py  test_code_analyzer.py  test_energy_estimator.py  test_integration.py  test_leaderboard.py  test_multi_region.py  test_nlp_classifier.py  test_sci_calculator.py  test_ux_overhaul.py
