[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "green-pipe"
version = "0.1.0"
description = "GreenPipe: GSF-Compliant Carbon-Aware CI/CD Agent for GitLab"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    # GitLab API
    "python-gitlab>=4.0.0",
    # HTTP client (for Carbon Aware SDK API)
    "httpx>=0.28.0",
    # ML/NLP
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    # Async support
    "anyio>=4.7.0",
    # Caching
    "cachetools>=5.5.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
